--- a/css/style.css
+++ b/css/style.css
@@ -764,13 +764,16 @@ footer .footer-below  p a:hover {
 .header {
     height: 765px;
 }
+}
+
+@media (max-width: 1200px) {
 .navbar-title {
     display: none;
 }
 .navbar-title-short {
     display: inline-block; margin-top: 8px;
 }
-
+    
 }
 
 @media (max-width: 1080px) {
